tests/baselines/reference/unusedLocalsAndObjectSpread.errors.txt
unusedLocalsAndObjectSpread.ts(20,18): error TS6133: 'bar' is declared but its value is never read.
unusedLocalsAndObjectSpread.ts(27,21): error TS6133: 'bar' is declared but its value is never read.


==== unusedLocalsAndObjectSpread.ts (2 errors) ====
    declare var console: { log(a: any): void };
    
    function one() {
        const foo = { a: 1, b: 2 };
        // 'a' is declared but never used
        const {a, ...bar} = foo;
        console.log(bar);
    }
    
    function two() {
        const foo = { a: 1, b: 2 };
        // '_' is declared but never used
        const {a: _, ...bar} = foo;
        console.log(bar);
    }
    
    function three() {
        const foo = { a: 1, b: 2 };
        // 'a' is declared but never used
        const {a, ...bar} = foo; // bar should be unused
                     ~~~
!!! error TS6133: 'bar' is declared but its value is never read.
        //console.log(bar);
    }
    
    function four() {
        const foo = { a: 1, b: 2 };
        // '_' is declared but never used
        const {a: _, ...bar} = foo; // bar should be unused
                        ~~~
!!! error TS6133: 'bar' is declared but its value is never read.
        //console.log(bar);
    }
    